--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -1,9 +1,10 @@
 ﻿/* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    margin-top: 15px;
+    
     padding-left: 15px;
     padding-right: 15px;
+    
 }
 
 /* Set widths on the form inputs since otherwise they're 100% wide */
@@ -18,4 +19,45 @@ textarea {
     .body-content {
         padding: 0;
     }
+}
+
+.desplegable-item{
+    text-decoration: none;
+    color: whitesmoke;
+    display: flex;
+    justify-content: center;
+}
+
+.desplegable-item:hover{
+    color: wheat;
+    text-decoration:underline;
+}
+
+.img-card {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    position:relative;
+}
+
+.container-btn-primavera {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -25%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.btn-primavera {
+    font-size: 25px;
+    font-family: Georgia, serif;
+    color: black;
+    text-decoration: none;
+    border: 1px solid;
+    padding: 5px;
+}
+
+.btn-primavera:hover{
+    
+    color: blueviolet;
 }
