--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -21,9 +21,17 @@
 
     
     <!--boostrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
+  
+    <!-- Bootstrap 5.0.2 CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1AnmPnQu9oabyhMf05f1bfbE4bmiC4D9g8axlZZkLvV7l/AR7xS" crossorigin="anonymous">
+
+<!-- Popper.js (sin integrity y crossorigin) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
+
+<!-- Bootstrap 5.0.2 JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhG2YCEp3B8BQMB5jRpGi57RjUVO65aL7K8l+0I5yKvtZOg8ABTTE1Pi6jizo" crossorigin="anonymous"></script>
+
 
 
 
@@ -77,6 +85,11 @@
             </footer>
         </div>
     </form>
+    <script>
+
+    
+    </script>
+
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
     </asp:PlaceHolder>
