--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -61,3 +61,9 @@ textarea {
     
     color: blueviolet;
 }
+
+.container-iniciarsesion{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
