--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -69,7 +69,7 @@
                     <ul class="navbar-nav"> 
                         
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Iniciar Sesion</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/IniciarSesion">Iniciar Sesion</a></li>
                     </ul>
 
                     
