--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -10,7 +10,8 @@
 
     <title><%: Page.Title %> - ECommerce</title>
     
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -69,7 +70,12 @@
                     <ul class="navbar-nav"> 
                         
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/IniciarSesion">Iniciar Sesion</a></li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" runat="server" href="~/IniciarSesion">
+                            <i class="bi bi-person"></i> Ingresar</a>
+
+                        </li>
                     </ul>
 
                     
