--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -4,12 +4,12 @@
 
 <html lang="es">
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title><%: Page.Title %> - ECommerce</title>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 
@@ -17,21 +17,21 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
-    
+
     <!--boostrap-->
-    
-  
+
+
     <!-- Bootstrap 5.0.2 CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1AnmPnQu9oabyhMf05f1bfbE4bmiC4D9g8axlZZkLvV7l/AR7xS" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1AnmPnQu9oabyhMf05f1bfbE4bmiC4D9g8axlZZkLvV7l/AR7xS" crossorigin="anonymous">
 
-<!-- Popper.js (sin integrity y crossorigin) -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
+    <!-- Popper.js (sin integrity y crossorigin) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
 
-<!-- Bootstrap 5.0.2 JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhG2YCEp3B8BQMB5jRpGi57RjUVO65aL7K8l+0I5yKvtZOg8ABTTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Bootstrap 5.0.2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhG2YCEp3B8BQMB5jRpGi57RjUVO65aL7K8l+0I5yKvtZOg8ABTTE1Pi6jizo" crossorigin="anonymous"></script>
 
 
 
@@ -67,21 +67,50 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-header">
-                    <ul class="navbar-nav"> 
-                        
+                    <ul class="navbar-nav">
+
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
-                        
+
                         <li class="nav-item">
                             <a class="nav-link" runat="server" href="~/IniciarSesion">
-                            <i class="bi bi-person"></i> Ingresar</a>
+                                <i class="bi bi-person"></i>Ingresar</a>
 
                         </li>
                     </ul>
 
-                    
                 </div>
             </div>
         </nav>
+        <div class="navbar-dropdown" style="background-color: #e3f2fd; padding: 0; display: flex; justify-content: center;">
+
+            <div class="btn-group">
+                <button class="dropdown-toggle text-light" style="background-color: #273746" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Marcas
+                </button>
+                <ul id="ulMarcas" class="dropdown-menu bg-light" runat="server">
+                    <!-- Desplegable de Marcas -->
+                </ul>
+            </div>
+
+            <div class="btn-group">
+                <button class="dropdown-toggle text-light" style="background-color: #273746" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Categorías
+                </button>
+                <ul id="ulCategorias" class="dropdown-menu bg-light" runat="server">
+                    <!-- elementos dinmicamente -->
+                </ul>
+            </div>
+            <div class="btn-group">
+                <button class="dropdown-toggle text-light" style="background-color: #273746" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Mi Cuenta
+                </button>
+                <ul class="dropdown-menu bg-light">
+                    <li><a class="dropdown-item" href="/Perfil">Perfil</a></li>
+                    <li><a class="dropdown-item" href="/Pedidos">Pedidos</a></li>
+                    <li><a class="dropdown-item" href="/CerrarSesion">Cerrar Sesión</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
@@ -93,8 +122,8 @@
     </form>
     <script>
 
-    
-    </script>
+
+</script>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
