agregue estilo al site master

--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -183,3 +183,6 @@ label{
 .btn-bd-primary-Personalizado-violeta:focus {
     box-shadow: 0 0 0 0.2rem rgba(111, 66, 193, 0.5);
 }
+
+/* NAV ITEMS HEADER */
+
