--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -59,9 +59,9 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark" style="background-color: #fa8072 !important;">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/Default">Ecommerce Titulo</a>
+                <a class="navbar-brand" runat="server" href="~/Default">Ecommerce</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -69,10 +69,10 @@
                 <div class="navbar-header">
                     <ul class="navbar-nav">
 
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" style="background-color: white !important; border: 1px solid #ccc !important; border-radius: 5px !important; color: black !important;" runat="server" href="~/Contact">Contacto</a></li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" runat="server" href="~/IniciarSesion">
+                        <li class="nav-item" style="margin-left: 5px !important;">
+                            <a class="nav-link" style="background-color: white !important; border: 1px solid #ccc !important; border-radius: 5px !important; color: black !important;" runat="server" href="~/IniciarSesion">
                                 <i class="bi bi-person"></i>Ingresar</a>
 
                         </li>
