--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -12,6 +12,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-r1nO4Hs49S1XLav+I5FexLNUxAXC5u/F6tCHaNNTwB1s5BPD9X5gHXYz8FIMc6aG" crossorigin="anonymous">
 
+
+       <!-- para las card imagenes -->
+    <style>
+    .image-container {
+        width: 100%;
+        height: 0;
+        padding-top: 56.25%; 
+        position: relative;
+        overflow: hidden;
+        background-color: #f0f0f0; 
+    }
+
+    .image-container img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain; 
+    }
+</style>
+
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
