--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -82,7 +82,7 @@
         <ul class="dropdown-menu bg-light">
             <li><a class="dropdown-item" href="/Perfil">Perfil</a></li>
             <li><a class="dropdown-item" href="/Pedidos">Pedidos</a></li>
-            <li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>
+            <%--<li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>--%>
             <%--<li><a class="dropdown-item" href="/CerrarSesion">Cerrar Sesión</a></li>--%>
             <asp:LinkButton ID="CerrarSesion" CssClass="dropdown-item" OnClick="CerrarSesion_OnClick" runat="server">Cerrar Sesión</asp:LinkButton>
         </ul>
