--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -11,10 +11,11 @@
     <title><%: Page.Title %> - ECommerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-r1nO4Hs49S1XLav+I5FexLNUxAXC5u/F6tCHaNNTwB1s5BPD9X5gHXYz8FIMc6aG" crossorigin="anonymous">
-
-
-       <!-- para las card imagenes -->
-    <style>
+   
+    
+     <style>
+      /* <!-- para las card imagenes -->*/
+  
     .image-container {
         width: 100%;
         height: 0;
@@ -32,7 +33,31 @@
         height: 100%;
         object-fit: contain; 
     }
+    .carrito-container {
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        padding: 15px;
+        margin-bottom: 20px;
+    }
+    .carrito-header {
+        font-weight: bold;
+        font-size: 1.2em;
+    }
+    .carrito-item {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 0;
+    }
+    .carrito-total {
+        font-weight: bold;
+        font-size: 1.2em;
+        text-align: right;
+    }
 </style>
+
+
+
+
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
