--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -391,3 +391,144 @@ button {
     transform: translateY(0px);
     transition-duration: 0.3s;
 }
+
+/*_____ FormulsrioProductosAM _____*/
+/*.form {
+    --width-of-input: 200px;
+    --border-height: 1px;
+    --border-before-color: rgba(221, 221, 221, 0.39);
+    --border-after-color: #5891ff;
+    --input-hovered-color: #4985e01f;
+    position: relative;
+    width: var(--width-of-input);
+}*/
+/* styling of Input */
+/*.input {
+    color: #fff;
+    font-size: 0.9rem;
+    background-color: transparent;
+    width: 100%;
+    box-sizing: border-box;
+    padding-inline: 0.5em;
+    padding-block: 0.7em;
+    border: none;
+    border-bottom: var(--border-height) solid var(--border-before-color);
+}*/
+/* styling of animated border */
+/*.input-border {
+    position: absolute;
+    background: var(--border-after-color);
+    width: 0%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    transition: 0.3s;
+}*/
+/* Hover on Input */
+/*input:hover {
+    background: var(--input-hovered-color);
+}
+
+input:focus {
+    outline: none;
+}*/
+    /* here is code of animated border */
+    /*input:focus ~ .input-border {
+        width: 100%;
+    }*/
+
+h1 {
+    font-size: 2.5rem;
+    color: #5891FF;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    font-weight: bold;
+    border-bottom: 2px solid rgba(88, 145, 255, 0.5);
+    padding-bottom: 10px;
+}
+
+.form {
+    --width-of-input: 200px;
+    --border-height: 1px;
+    --border-before-color: rgba(221, 221, 221, 0.39);
+    --border-after-color: #5891ff;
+    --input-hovered-color: #4985e01f;
+    position: relative;
+    width: var(--width-of-input);
+}
+
+.input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 1rem;
+    color: #050505;
+    background: transparent;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+    transition: border-color 0.3s;
+}
+
+    .input:focus {
+        border-bottom-color: #5891FF;
+    }
+
+.input-border {
+    display: block;
+    height: 2px;
+    background-color: #5891FF;
+    transition: width 0.3s ease;
+    width: 0;
+}
+
+.input:focus + .input-border {
+    width: 100%;
+}
+
+.container.g-md-3 {
+    max-width: 100%;
+    padding: 20px;
+}
+
+.form {
+    max-width: 100%;
+}
+/*-*/
+number-control {
+    display: flex;
+    align-items: center;
+}
+
+.number-left::before,
+.number-right::after {
+    content: attr(data-content);
+    background-color: #333333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    width: 80px;
+    color: #050505;
+    transition: background-color 0.3s;
+    cursor: pointer;
+}
+
+.number-left::before {
+    content: "-";
+}
+
+.number-right::after {
+    content: "+";
+}
+
+.number-quantity {
+    padding: 0.25rem;
+    border: 0;
+    width: 80px;
+    -moz-appearance: textfield;
+}
+
+.number-left:hover::before,
+.number-right:hover::after {
+    background-color: #666666;
+}
