--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -107,13 +107,14 @@ textarea {
     display: flex;
     text-align: center;
     flex-direction:column;
+    padding: 10px;
 }
 
 .btn-iniciar {
     padding: 5px;
     margin-top: 25px;
     text-decoration: none;
-    font-weight: bold;
+    font-size: 15px;
     color: black;
     border-radius: 5px;
     border: 1px solid;
@@ -123,6 +124,7 @@ textarea {
 .btn-iniciar:hover {
     border-color: orangered;
     background-color: #d95030;
+    font-weight: bold;
     color: white;
 }
 
@@ -532,3 +534,68 @@ number-control {
 .number-right:hover::after {
     background-color: #666666;
 }
+
+
+/* btn add */
+
+.button {
+    display: inline-block;
+    padding: 12px 24px;
+    margin-top: 10px;
+    border: 1px solid #4f4f4f;
+    border-radius: 4px;
+    transition: all 0.2s ease-in;
+    position: relative;
+    overflow: hidden;
+    font-size: 19px;
+    cursor: pointer;
+    color: black;
+    z-index: 1;
+}
+
+    .button:before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%) scaleY(1) scaleX(1.25);
+        top: 100%;
+        width: 140%;
+        height: 180%;
+        background-color: #d95030;
+        border-radius: 50%;
+        display: block;
+        transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+        z-index: -1;
+    }
+
+    .button:after {
+        content: "";
+        position: absolute;
+        left: 55%;
+        transform: translateX(-50%) scaleY(1) scaleX(1.45);
+        top: 180%;
+        width: 160%;
+        height: 190%;
+        background-color: #d95030;
+        border-radius: 50%;
+        display: block;
+        transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+        z-index: -1;
+    }
+
+    .button:hover {
+        color: #ffffff;
+        border: 1px solid #d95030;
+    }
+
+        .button:hover:before {
+            top: -35%;
+            background-color: #d95030;
+            transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+        }
+
+        .button:hover:after {
+            top: -45%;
+            background-color: #d95030;
+            transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+        }
