--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -83,7 +83,7 @@
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark" style="background-color: #fa8072 !important;">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/Default">Ecommerce</a>
+                <a class="navbar-brand" runat="server" href="~/Default" style="font-size: 2rem; color:black;">Ecommerce</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
