--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -599,3 +599,63 @@ number-control {
             background-color: #d95030;
             transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
         }
+
+/* IMG CARD - SITE MASTER */
+
+.image-container {
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%;
+    position: relative;
+    overflow: hidden;
+    background-color: #f0f0f0;
+}
+
+    .image-container img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+.carrito-container {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+
+.carrito-header {
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.carrito-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+}
+
+.carrito-total {
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: right;
+}
+
+/* NAV DROPDOWN */
+
+.dropdown-nav {
+    color: black;
+    padding-left: 5px;
+    display: flex;
+    flex-direction: column;
+    background-color: #fa8072;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-group-nav {
+    
+    display: flex;
+}
