--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -13,47 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-r1nO4Hs49S1XLav+I5FexLNUxAXC5u/F6tCHaNNTwB1s5BPD9X5gHXYz8FIMc6aG" crossorigin="anonymous">
    
     
-     <style>
-      /* <!-- para las card imagenes -->*/
-  
-    .image-container {
-        width: 100%;
-        height: 0;
-        padding-top: 56.25%; 
-        position: relative;
-        overflow: hidden;
-        background-color: #f0f0f0; 
-    }
 
-    .image-container img {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: contain; 
-    }
-    .carrito-container {
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        padding: 15px;
-        margin-bottom: 20px;
-    }
-    .carrito-header {
-        font-weight: bold;
-        font-size: 1.2em;
-    }
-    .carrito-item {
-        display: flex;
-        justify-content: space-between;
-        padding: 10px 0;
-    }
-    .carrito-total {
-        font-weight: bold;
-        font-size: 1.2em;
-        text-align: right;
-    }
-</style>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -101,10 +61,19 @@
                 </div>
             </div>
         </nav>
-        <div class="navbar-dropdown" style="background-color: #e3f2fd; padding: 0; display: flex; justify-content: center;">
+
+
+        
+
+
+
+
+
+
+        <div class="navbar-dropdown" style="background-color: black; padding: 0; display: flex; justify-content: center;">
 
             <div class="btn-group">
-                <button class="dropdown-toggle text-light" style="background-color: #273746" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="dropdown-nav"  type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Marcas
                 </button>
                 <ul id="ulMarcas" class="dropdown-menu bg-light" runat="server">
@@ -113,7 +82,7 @@
             </div>
 
             <div class="btn-group">
-                <button class="dropdown-toggle text-light" style="background-color: #273746" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="dropdown-nav" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Categorías
                 </button>
                 <ul id="ulCategorias" class="dropdown-menu bg-light" runat="server">
