--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -50,11 +50,11 @@
                 </button>
                 <div class="navbar-header">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" style="background-color: white !important; border: 1px solid #ccc !important; border-radius: 5px !important; color: black !important;" runat="server" href="#contacto">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link animated-button"  runat="server" href="#contacto">Contacto</a></li>
                         <%--Admin--%>
-                        <li class="nav-item" ><a class="nav-link" style="background-color: white !important; border: 1px solid #ccc !important; border-radius: 5px !important; color: black !important;" id="linkAdmin" runat="server" href="~/Administrador.aspx">Administrador</a></li>
+                        <li class="nav-item" ><a class="nav-link animated-button"  id="linkAdmin" runat="server" href="~/Administrador.aspx">Administrador</a></li>
                         <li class="nav-item" style="margin-left: 5px !important;" runat="server" id="IngresarBoton" visible='<%# Session["usuario"] == null %>'>
-                            <a class="nav-link" style="background-color: white !important; border: 1px solid #ccc !important; border-radius: 5px !important; color: black !important;" runat="server" href="~/IniciarSesion">
+                            <a class="nav-link animated-button"  runat="server" href="~/IniciarSesion">
                                 <i class="bi bi-person"></i>Ingresar</a>
                         </li>
                     </ul>
@@ -90,7 +90,7 @@
                 </ul>
             </div>
             <div class="btn-group" runat="server" id="MiCuentaMenu" visible='<%# Session["usuario"] != null %>'>
-        <button class="dropdown-toggle text-light" style="background-color: #273746" type="button" data-bs-toggle="dropdown" aria-expanded="false">Mi Cuenta</button>
+        <button class="dropdown-nav" type="button" data-bs-toggle="dropdown" aria-expanded="false">Mi Cuenta</button>
         <ul class="dropdown-menu bg-light">
             <li><a class="dropdown-item" href="/Perfil">Perfil</a></li>
             <li><a class="dropdown-item" href="/Pedidos">Pedidos</a></li>
