--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -196,6 +196,8 @@ label{
     justify-content: space-between;
     align-items: center;
     margin-top: 20px;
+    border-top: 3px solid;
+    padding: 15px;
 }
 
 formulario-1{
@@ -693,4 +695,7 @@ number-control {
         color: black;
     }
 
-   
+
+.shadow {
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1), 0 0 0 2px rgb(190, 190, 190), 0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
