Agregue funcionalidad de contacto

--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -692,7 +692,7 @@ number-control {
     .animated-button:hover {
         
         background-color: #d95030;
-        color: black;
+        color: white;
     }
 
 
