--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -1,10 +1,8 @@
 ﻿/* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    
     padding-left: 15px;
     padding-right: 15px;
-    
 }
 
 /* Set widths on the form inputs since otherwise they're 100% wide */
@@ -21,23 +19,23 @@ textarea {
     }
 }
 
-.desplegable-item{
+.desplegable-item {
     text-decoration: none;
     color: whitesmoke;
     display: flex;
     justify-content: center;
 }
 
-.desplegable-item:hover{
-    color: wheat;
-    text-decoration:underline;
-}
+    .desplegable-item:hover {
+        color: wheat;
+        text-decoration: underline;
+    }
 
 .img-card {
     width: 100%;
     margin: 0;
     padding: 0;
-    position:relative;
+    position: relative;
 }
 
 .container-btn-primavera {
@@ -45,12 +43,11 @@ textarea {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -25%);
-    
 }
 
 .btn-primavera {
     font-size: 25px;
-    font-family:'Lucida Console';
+    font-family: 'Lucida Console';
     color: black;
     display: flex;
     text-decoration: none;
@@ -68,45 +65,44 @@ textarea {
 
 /* INICIAR SESION */
 
-.container-inicio{
-    display:flex;
-    flex-direction:column;
-    
+.container-inicio {
+    display: flex;
+    flex-direction: column;
 }
 
-.h3-inicio{
+.h3-inicio {
     text-align: center;
     margin-top: 5%;
 }
 
-.container-datos{
-   width: 300px;
-   padding: 20px;
-   margin: 0 auto;
-   border: 1px solid;
-   border-radius: 10px;
+.container-datos {
+    width: 300px;
+    padding: 20px;
+    margin: 0 auto;
+    border: 1px solid;
+    border-radius: 10px;
 }
 
 .txtdatos {
-    width: 100%; 
+    width: 100%;
     padding: 10px;
-    font-size: 16px; 
-    border: 1px solid #ccc; 
-    border-radius: 5px; 
-    margin-bottom: 15px; 
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
 }
 
 .lbldatos {
-    font-weight: bold; 
-    display: block; 
-    margin-bottom: 5px; 
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
 }
 
-.container-btn-iniciar{
-    width:100%;
+.container-btn-iniciar {
+    width: 100%;
     display: flex;
     text-align: center;
-    flex-direction:column;
+    flex-direction: column;
     padding: 10px;
 }
 
@@ -121,38 +117,37 @@ textarea {
     width: 100%;
 }
 
-.btn-iniciar:hover {
-    border-color: orangered;
-    background-color: #d95030;
-    font-weight: bold;
-    color: white;
-}
+    .btn-iniciar:hover {
+        border-color: orangered;
+        background-color: #d95030;
+        font-weight: bold;
+        color: white;
+    }
 
-.btn-registrarse{
+.btn-registrarse {
     text-decoration: none;
     font-weight: bold;
 }
 
-.btn-registrarse:hover{
-    text-decoration:underline;
-   
-}
+    .btn-registrarse:hover {
+        text-decoration: underline;
+    }
 
 /**** Perfil ****/
-#perfil{
+#perfil {
     max-width: 400px;
     margin: 0 auto;
 }
 
-.datos{
+.datos {
     display: flex;
     flex-direction: column;
-    margin-bottom:15px;
+    margin-bottom: 15px;
 }
 
-label{
+label {
     font-weight: bold;
-    margin-bottom: 5px; 
+    margin-bottom: 5px;
 }
 
 .textbox {
@@ -164,10 +159,10 @@ label{
     transition: border-color 0.3s;
 }
 
-.textbox:focus {
-    border-color: red;
-    outline: none;
-}
+    .textbox:focus {
+        border-color: red;
+        outline: none;
+    }
 
 .btn-bd-primary-Personalizado-violeta {
     padding: 5px;
@@ -177,20 +172,19 @@ label{
     border-radius: 5px;
 }
 
-.btn-bd-primary-Personalizado-violeta:hover {
-    color: white;
-    background-color: red;
-    border-color: #ff7e7e;
-}
+    .btn-bd-primary-Personalizado-violeta:hover {
+        color: white;
+        background-color: red;
+        border-color: #ff7e7e;
+    }
 
-.btn-bd-primary-Personalizado-violeta:focus {
-    box-shadow: 0 0 0 0.2rem rgba(111, 66, 193, 0.5);
-}
+    .btn-bd-primary-Personalizado-violeta:focus {
+        box-shadow: 0 0 0 0.2rem rgba(111, 66, 193, 0.5);
+    }
 
 /* CONTACTO */
 
-.container-contacto
-{
+.container-contacto {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -200,7 +194,7 @@ label{
     padding: 15px;
 }
 
-formulario-1{
+formulario-1 {
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -221,17 +215,37 @@ formulario-2 {
     padding: 10px;
 }
 
-.list-categorias tr {
-    padding: 10px;
-    text-align: left;
-    border: 1px solid #d95030;
-}
+    .list-categorias tr {
+        padding: 10px;
+        text-align: left;
+        border: 1px solid #d95030;
+    }
 
 .grid-container {
     max-height: 250px;
     overflow-y: auto;
     border: 1px solid #d95030;
 }
+
+/* Selecionar categoria con color */
+.selected-row {
+    background-color: #ffdcd1eb;
+}
+
+.btn-transparente {
+    background-color: transparent;
+    border: none;
+    color: #b42200;
+    cursor: pointer;
+    font-size: 30px;
+    padding: 0;
+    transition: color 0.3s;
+}
+
+    .btn-transparente:hover {
+        color: #ff7150;
+    }
+
 /*_____ Default ABM _____*/
 
 /* Boton agregar */
@@ -436,8 +450,8 @@ button {
 input:focus {
     outline: none;
 }*/
-    /* here is code of animated border */
-    /*input:focus ~ .input-border {
+/* here is code of animated border */
+/*input:focus ~ .input-border {
         width: 100%;
     }*/
 
@@ -658,7 +672,6 @@ number-control {
 }
 
 .btn-group-nav {
-    
     display: flex;
 }
 
@@ -690,7 +703,6 @@ number-control {
 }
 
     .animated-button:hover {
-        
         background-color: #d95030;
         color: white;
     }
@@ -699,4 +711,3 @@ number-control {
 .shadow {
     box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1), 0 0 0 2px rgb(190, 190, 190), 0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
-
