--- a/TPCGrupo8A/Content/Site.css
+++ b/TPCGrupo8A/Content/Site.css
@@ -711,3 +711,13 @@ number-control {
 .shadow {
     box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1), 0 0 0 2px rgb(190, 190, 190), 0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
+
+/* Detalles Producto */
+.rowComprar{
+    display: flex;
+    justify-content: end;
+}
+
+.classComprar {
+    background-color: #d95030;
+}
